# estatewise

./: .gitignore  ClaudeConfig.json  DOCKER.md  DOCKER_SUCCESS.md  LICENSE  OpenAIConfig.json  QUICKSTART.md  README.md  REFACTOR_SUMMARY.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  docker-start.sh  env.example  nginx.conf  test-mcp-servers.py
apps/frontend/: package.json  tailwind.config.js
apps/frontend/app/: globals.css  layout.tsx  page.tsx  surya.txt
apps/frontend/components/: CommandPalette.tsx  SmartCards.tsx  TimelineView.tsx
backend/: .dockerignore  Dockerfile  README.md  test_compare_offers.py  test_generate_comps.py
backend/mcp-servers/clientside/: COMPARE_OFFERS_README.md  main.py  pyproject.toml
backend/mcp-servers/clientside/tools/: __init__.py  client_tools.py  offer_utils.py
backend/mcp-servers/leadgen/: main.py  pyproject.toml  requirements.txt
backend/mcp-servers/paperwork/: main.py  pyproject.toml
frontend/: Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CommandPalette.tsx  DebugConsole.tsx  ExitIntentModal.tsx  FloatingActionButton.tsx  IssueReportModal.tsx  LoadingSkeleton.tsx  SmartCards.tsx  TimelineView.tsx  ToolOutputCard.tsx  ToolStream.tsx
frontend/hooks/: useToolStream.ts
frontend/utils/: README.md  fetchFromMCP.ts
mcp-servers/clientside/: main.py
mcp-servers/leadgen/: main.py
mcp-servers/paperwork/: main.py  pyproject.toml
mcp-servers/paperwork/tools/: document_tools.py
shared/utils/: __init__.py
(+17 files in other folders)
