[project]
name = "paperwork-mcp"
version = "0.1.0"
description = "MCP server for contract and escrow document management"
authors = [
    {name = "EstateWise Team", email = "team@estatewise.com"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-docx>=0.8.11",
    "PyPDF2>=3.0.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
] 