[project]
name = "clientside-mcp"
version = "0.1.0"
description = "MCP server for client-facing tasks and communications"
authors = [
    {name = "EstateWise Team", email = "team@estatewise.com"}
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
] 